Triangulation now working

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 				<h2>N</h2>
 				<div class="sliders">
 					<div>
-						<input type="range" id="slider-n" name="N" value="4" min="4" max="1000" step="1" autocomplete="off" />
-						<input type="number" id="input-n" name="N" value="4" min="4" max="1000" step="1" autocomplete="off" />
+						<input type="range" id="slider-n" name="N" value="4" min="4" max="100" step="1" autocomplete="off" />
+						<input type="number" id="input-n" name="N" value="4" min="4" max="100" step="1" autocomplete="off" />
+						<div><input type="checkbox" name="toggle_point" id="toggle_point" > 
+							toggle point
+						</div>
 					</div> 
 				</div>
 			</div>
