--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 						<input type="range" id="slider-n" name="N" value="4" min="4" max="100" step="1" autocomplete="off" />
 						<input type="number" id="input-n" name="N" value="4" min="4" max="100" step="1" autocomplete="off" />
 						<div><input type="checkbox" name="toggle_point" id="toggle_point" > 
-							toggle point
+							Toggle point preview
+						</div>
+						<div><input type="checkbox" name="toggle_triangle_coloring" id="toggle_triangle_coloring" > 
+							Toggle point coloring
 						</div>
 					</div> 
 				</div>
