Segmentation du code de génération du maillage de la sphere.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<div>
 						<input type="range" id="slider-n" name="N" value="4" min="4" max="100" step="1" autocomplete="off" />
 						<input type="number" id="input-n" name="N" value="4" min="4" max="100" step="1" autocomplete="off" />
-						<div><input type="checkbox" name="toggle_point" id="toggle_point" > 
+						<div><input type="checkbox" name="toggle_point_preview" id="toggle_point_preview" > 
 							Toggle point preview
 						</div>
 						<div><input type="checkbox" name="toggle_triangle_coloring" id="toggle_triangle_coloring" > 
