Preview coloration des sommets selon leurs nombres de voisins

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 		<div class="controllers">
    
 			<div class="group yellow">
-				<h2>N</h2>
+				<h2>Sphere parameters</h2>
 				<div class="sliders">
 					<div>
 						<input type="range" id="slider-n" name="N" value="4" min="4" max="100" step="1" autocomplete="off" />
 						<input type="number" id="input-n" name="N" value="4" min="4" max="100" step="1" autocomplete="off" />
-						<div><input type="checkbox" name="toggle_point_preview" id="toggle_point_preview" > 
+						<div><input type="checkbox" name="toggle_point_preview" id="toggle_point_preview" autocomplete="off" > 
 							Toggle point preview
 						</div>
-						<div><input type="checkbox" name="toggle_triangle_coloring" id="toggle_triangle_coloring" > 
-							Toggle point coloring
+						<div><input type="checkbox" name="toggle_triangle_coloring" id="toggle_triangle_coloring" checked autocomplete="off" > 
+							Toggle triangle area coloring
 						</div>
 					</div> 
 				</div>
