Ajout de la simulation de la repulsion des points de la sphère

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<script src="scripts/gl_utils.js"></script>  
 		<script src="scripts/camera.js"></script>
 		<script src="scripts/sphere.js"></script>
+		<script src="scripts/repulsion_simulation.js" defer></script>
 		<script src="scripts/main.js" defer></script>
 
 		<link rel="stylesheet" href="style.css">
